SERVER-46908 Trailing slash is referred to as trailing comma in error message

GitOrigin-RevId: ae0026d98075aba5e81318748287325656685339